lagd klart til oppkobling til database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 spring.application.name=TrashTag
 
+spring.datasource.url=
+spring.datasource.username=h679175
+spring.datasource.password=
 
 logging.level.org.springframework.web=DEBUG
