--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
 spring.application.name=TrashTag
+spring.config.import=optional:file:./dbProperties
 
-spring.datasource.url=
-spring.datasource.username=h679175
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://ider-database.westeurope.cloudapp.azure.com:5433/h679175
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
 
 logging.level.org.springframework.web=DEBUG
