--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.application.name=TrashTag
 spring.config.import=optional:file:./dbProperties
 
 spring.datasource.url=jdbc:postgresql://ider-database.westeurope.cloudapp.azure.com:5433/h679175
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
+spring.datasource.username=h679175
+spring.datasource.password=LlthLltsTkwiw
 
 logging.level.org.springframework.web=DEBUG
